--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="new_shopping_list_name">Nowa lista</string>
+    <string name="title_activity_shopping_details">ShoppingDetailsActivity</string>
 </resources>
