--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="new_shopping_list_name">Nowa lista</string>
     <string name="title_activity_shopping_details">ShoppingDetailsActivity</string>
+    <string name="shopping_item_hint">co kupić?</string>
 </resources>
