--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="shopping_item_hint">co kupić?</string>
     <string name="archived_lists">Archiwalne</string>
     <string name="active_lists">Aktualne</string>
+    <string name="shopping_list_name_hint">Gdzie?</string>
 </resources>
