Clean up more unncessary resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="new_shopping_list_name">Nowa lista</string>
-    <string name="title_activity_shopping_details">ShoppingDetailsActivity</string>
+    <string name="title_activity_shopping_details">Szczegóły</string>
     <string name="shopping_item_hint">co kupić?</string>
     <string name="archived_lists">Archiwalne</string>
     <string name="active_lists">Aktualne</string>
-    <string name="shopping_list_name_hint">Gdzie?</string>
+    <string name="shopping_list_name_hint">Nazwa listy</string>
 </resources>
